--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "axios": "^0.19.2",
     "color": "^3.1.2",
     "expo": "~36.0.0",
+    "graphql": "^14.6.0",
+    "graphql-request": "^1.8.2",
+    "graphql-tag": "^2.10.3",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "mobx-state-tree": "^3.15.0",
     "moment": "^2.24.0",
+    "mst-gql": "^0.7.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
