--- a/package.json
+++ b/package.json
@@ -27,16 +27,20 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-snap-carousel": "^3.8.4",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@react-native-community/eslint-config": "^0.0.7",
+    "@types/color": "^3.0.1",
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
+    "@types/react-native-snap-carousel": "^3.7.4",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "babel-preset-expo": "~8.0.0",
