--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
-    "@react-navigation/bottom-tabs": "^5.1.0",
+    "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.8",
+    "@types/yup": "^0.26.32",
     "axios": "^0.19.2",
     "color": "^3.1.2",
     "expo": "~36.0.0",
+    "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "graphql-request": "^1.8.2",
     "graphql-tag": "^2.10.3",
@@ -34,7 +36,8 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-snap-carousel": "^3.8.4",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
