--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "color": "^3.1.2",
     "expo": "~36.0.0",
+    "expo-location": "~8.0.0",
     "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "graphql-request": "^1.8.2",
