--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template (TypeScript)",
+    "name": "Shopping App",
     "slug": "ShoppingApp",
     "privacy": "public",
     "platforms": [
