--- a/package.json
+++ b/package.json
@@ -5,60 +5,62 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "check-for-errors": "node check-for-errors.js"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.6.1",
-    "@react-navigation/native": "^5.6.1",
-    "@react-navigation/stack": "^5.6.2",
-    "@types/yup": "^0.29.3",
-    "axios": "^0.19.2",
-    "color": "^3.1.2",
-    "expo": "^38.0.0",
-    "expo-location": "~8.2.1",
-    "formik": "^2.1.4",
-    "graphql": "^15.1.0",
-    "graphql-request": "^2.0.0",
-    "graphql-tag": "^2.10.3",
-    "lodash": "^4.17.15",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
-    "mobx-state-tree": "^3.16.0",
-    "moment": "^2.27.0",
-    "mst-gql": "^0.12.0",
+    "@react-navigation/bottom-tabs": "5.6.1",
+    "@react-navigation/native": "5.6.1",
+    "@react-navigation/stack": "5.6.2",
+    "@types/yup": "0.29.3",
+    "axios": "0.19.2",
+    "color": "3.1.2",
+    "expo": "38.0.8",
+    "expo-location": "8.2.1",
+    "expo-status-bar": "1.0.2",
+    "formik": "2.1.4",
+    "graphql": "14.7.0",
+    "graphql-request": "2.0.0",
+    "graphql-tag": "2.10.3",
+    "lodash": "4.17.15",
+    "mobx": "5.15.4",
+    "mobx-react": "6.2.2",
+    "mobx-state-tree": "3.16.0",
+    "moment": "2.27.0",
+    "mst-gql": "0.12.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
+    "react-native-gesture-handler": "1.6.0",
     "react-native-maps": "0.27.1",
-    "react-native-pose": "^0.9.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "3.0.2",
-    "react-native-screens": "~2.9.0",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.11.7",
-    "yup": "^0.29.1"
+    "react-native-pose": "0.9.1",
+    "react-native-reanimated": "1.9.0",
+    "react-native-safe-area-context": "3.0.7",
+    "react-native-screens": "2.9.0",
+    "react-native-snap-carousel": "3.9.1",
+    "react-native-web": "0.11.7",
+    "yup": "0.29.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/color": "^3.0.1",
-    "@types/react": "~16.9.41",
-    "@types/react-native": "~0.62.13",
-    "@types/react-native-snap-carousel": "^3.8.1",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "babel-preset-expo": "^8.2.3",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "eslint-plugin-react-native": "^3.8.1",
-    "husky": "^4.2.5",
-    "prettier": "^2.0.5",
-    "typescript": "~3.9.5"
+    "@babel/core": "7.10.4",
+    "@react-native-community/eslint-config": "2.0.0",
+    "@types/color": "3.0.1",
+    "@types/react": "16.9.41",
+    "@types/react-native": "0.62.17",
+    "@types/react-native-snap-carousel": "3.8.1",
+    "@typescript-eslint/eslint-plugin": "3.6.0",
+    "@typescript-eslint/parser": "3.6.0",
+    "babel-preset-expo": "8.2.3",
+    "eslint": "7.4.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react-hooks": "4.0.5",
+    "eslint-plugin-react-native": "3.8.1",
+    "husky": "4.2.5",
+    "prettier": "2.0.5",
+    "typescript": "3.9.6"
   },
   "private": true
 }
