--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "5.6.1",
     "@react-navigation/native": "5.6.1",
     "@react-navigation/stack": "5.6.2",
+    "@types/lodash": "^4.14.158",
     "@types/yup": "0.29.3",
     "axios": "0.19.2",
     "color": "3.1.2",
